# aws-meun

./: .gitignore  README.md  pyproject.toml
src/aws_meun/: __init__.py  cli.py  core.py
